Articles frontend#1 (#50)
* Users are not able to post/put/delete articles and categories

* Article's photo + new article cards on category sorting

* Article's photo + new article cards on category sorting