@@ -6,12 +6,14 @@ import com.company.sportHubPortal.Services.CategoryServices.CategoryService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class ArticleServiceImpl implements ArticleService {
-    private ArticleRepository articleRepository;
+    private final ArticleRepository articleRepository;
 
     @Autowired
     private CategoryService categoryService;
@@ -28,7 +30,9 @@ public class ArticleServiceImpl implements ArticleService {
 
     @Override
     public List<Article> getAllArticles() {
-        return articleRepository.findAll();
+        List<Article> articles = articleRepository.findAll();
+        Collections.reverse(articles);
+        return articles;
     }
 
     @Override
@@ -38,9 +42,10 @@ public class ArticleServiceImpl implements ArticleService {
 
     @Override
     public List<Article> getArticlesByCategoryId(Long id) {
-        return articleRepository.findAll().stream()
+        List<Article> articles = new ArrayList<>(articleRepository.findAll().stream()
                 .filter(article -> article.getCategories().stream()
-                        .anyMatch(category -> category.getId().equals(id)))
-                .collect(Collectors.toList());
+                        .anyMatch(category -> category.getId().equals(id))).toList());
+        Collections.reverse(articles);
+        return articles;
     }
 }
